Added scripts to HTML:
blogarticle.js, article.js, and jquery cdn

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
     <!-- Code Fellows favicon -->
     <link rel="icon" type="image/x-icon" href="https://i.imgur.com/7v5ASc8.png">
   </head>
@@ -46,6 +47,8 @@
     <footer>
       &copy; 2017 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
-    <!-- // TODO: Intentionally vague: include all necessary script tags, in proper order! -->
+    <!-- // DONE: Intentionally vague: include all necessary script tags, in proper order! -->
+    <script src="starter-code/scripts/blogArticles.js"></script>
+    <script src="starter-code/scripts/article.js"></script>
   </body>
 </html>
