--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="styles/layout.css">
     <link rel="stylesheet" href="styles/modules.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="../starter-code/scripts/blogArticles.js"></script>
     <!-- Code Fellows favicon -->
     <link rel="icon" type="image/x-icon" href="https://i.imgur.com/7v5ASc8.png">
   </head>
@@ -48,7 +49,6 @@
       &copy; 2017 Code Fellows | Static Blog | Happy Ipsum!
     </footer>
     <!-- // DONE: Intentionally vague: include all necessary script tags, in proper order! -->
-    <script src="starter-code/scripts/blogArticles.js"></script>
-    <script src="starter-code/scripts/article.js"></script>
+    <script src="../starter-code/scripts/article.js"></script>
   </body>
 </html>
